--- a/src/client.mxml
+++ b/src/client.mxml
@@ -3,12 +3,14 @@
 				layout="absolute" creationComplete="onCreationComplete()" width="412" height="238" backgroundGradientAlphas="[0.0, 0.0]">
 	<mx:Script>
 		<![CDATA[
-			import com.squarespace.hopper.json.JSONEvent;
+			import com.squarespace.hopper.json.JSONSerializer;
+			import org.amqp.patterns.impl.RpcClientImpl;
+			import org.amqp.patterns.CorrelatedMessageEvent;
 			import com.squarespace.hopper.json.util.ClientContext;
 			import org.pranaframework.ioc.factory.xml.XMLObjectFactory;
-			import com.squarespace.hopper.json.impl.AMQPClientProxy;
 			
-			private var proxy:AMQPClientProxy;
+			private var proxy:RpcClientImpl;
+			private var json:JSONSerializer;
 			private var factory:XMLObjectFactory = new XMLObjectFactory();
 			private var ctx:ClientContext = new ClientContext();
 		
@@ -24,7 +26,7 @@
  				proxy.send(o,onResponse);	
  			}
  			
- 			public function onResponse(event:JSONEvent):void { 				
+ 			public function onResponse(event:CorrelatedMessageEvent):void { 				
  				result.text = "fib(" + event.result.question + ") -> " + event.result.answer;
  			}
  			
